Fixing dark mode, categories list.

--- a/client/src/components/Atoms/FooterTerms/FooterTerms.module.css
+++ b/client/src/components/Atoms/FooterTerms/FooterTerms.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   gap: 14px;
   margin: 0 auto;
-  padding: 28px 0;
+  padding: 10px 0;
   font-size: 14px;
   opacity: 0.5;
   background-image: url("../../../images/background-image.png");
