--- a/client/src/components/Organisms/Header/Header.module.css
+++ b/client/src/components/Organisms/Header/Header.module.css
@@ -1,5 +1,9 @@
-.Header {
+.HeaderWrapper {
   width: 100%;
+  border-bottom: 1px solid var(--shoppingListBorder);
+}
+
+.Header {
   max-width: 1024px;
   display: flex;
   flex-wrap: nowrap;
